# Digital_Challenge_418_20_51_21

./: docker-compose.yaml  myobjects.sql  myobjecttypes.sql  mywells.sql  repo.txt
backend/: Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/private_keys/: jwt-private.pem  jwt-public.pem
backend/src/app/: depends.py
backend/src/app/adapters/sqlalchemy_db/: uow.py
backend/src/app/adapters/sqlalchemy_db/migrations/: env.py
backend/src/app/adapters/sqlalchemy_db/migrations/versions/: ae94ffd8bcc4_.py
backend/src/app/adapters/sqlalchemy_db/models/: __init__.py  object.py  object_type.py  refresh_token.py  refresh_user.py  user.py  well.py  well_day_history.py  well_day_plan.py
backend/src/app/adapters/sqlalchemy_db/repositories/: refresh_token.py  refresh_user.py  user.py  well_day.py
backend/src/app/api/schemas/: well_day.py
backend/src/app/api/v1/: auth.py  root.py  well_day.py
backend/src/app/common/: auth_utils.py  exceptions.py  settings.py
backend/src/app/dto/: user.py
backend/src/app/ports/: uow.py
backend/src/app/ports/repositories/: refresh_token.py  refresh_user.py  user.py  well_day.py
backend/src/app/services/: auth.py  user.py  well_day.py
data/nginx/: nginx.conf
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: main.jsx
frontend/src/api/: auth.js  charts.js  query-client.js  top.js
frontend/src/components/: Root.jsx
frontend/src/components/charts/indicator/: Indicator.jsx
frontend/src/components/charts/oil-extraction/: OilExtraction.jsx
frontend/src/components/charts/response/: Response.jsx
frontend/src/components/lists/objects/: ListboxWrapper.jsx  Objects.jsx
frontend/src/components/map/: MapComponent.jsx
frontend/src/components/side-bar/: ListboxWrapper.jsx  SideBar.jsx
frontend/src/constants/: API_URL.js
frontend/src/hooks/auth/: useLogin.js  useLogout.js
frontend/src/hooks/charts/: useDebit.js  useEnergyConsumption.js
frontend/src/hooks/tops/: useEnergyIntensiveTop.js  useMostPerfomance.js
frontend/src/layouts/auth/: auth.jsx
frontend/src/layouts/foundation/: Foundation.jsx
frontend/src/layouts/main-content/: MainContent.jsx
frontend/src/styles/: index.css
frontend/src/views/analytics/: Analytics.jsx
frontend/src/views/auth/: auth.jsx
frontend/src/views/home/: home.jsx
frontend/src/views/map/: Map.jsx
(+3 files in other folders)
